--- a/OL-Base_Code.ipynb
+++ b/OL-Base_Code.ipynb
@@ -908,8 +908,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4e7bbbe7-d68c-4b29-b9b3-a3ea5ac6ae1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "focused_sharkattack_df.to_csv('focused_df.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae0f2b9b-3ab2-4ff8-b684-d5c48aaac260",
    "metadata": {},
    "outputs": [],
    "source": []
