--- a/OL-Base_Code.ipynb
+++ b/OL-Base_Code.ipynb
@@ -2246,44 +2246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "6582805e-37f3-4ea0-82b6-ce77e474f999",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Shark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\SONIAV~1\\AppData\\Local\\Temp/ipykernel_14792/1355398139.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnew_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfocused_sharkattack_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfocused_sharkattack_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mShark\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;34m\"Great White Shark\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'Shark' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "#new_df = focused_sharkattack_df[focused_sharkattack_df[Shark==\"Great White Shark\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "a9dd1648-4af0-471c-befa-d0106ebeee0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#focused_sharkattack_df.to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "id": "4e7bbbe7-d68c-4b29-b9b3-a3ea5ac6ae1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#focused_sharkattack_df.to_csv('focused_df.csv', index=False)"
+    "focused_sharkattack_df.to_csv('focused_df.csv', index=False)"
    ]
   },
   {
